# FunctionGraphics

./: .gitignore  Body.h  CMakeLists.txt  Collision.h  Controls.cpp  Controls.h  Functions.cpp  Functions.h  Graphics.sln  Graphics.vcxproj  Graphics.vcxproj.filters  Initers.h  Main.cpp  Mesh.h  Raytracing.sln  Raytracing.vcxproj  Raytracing.vcxproj.filters  Renderer.h  Shaders.h  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
Core/: Display.cpp  Display.h  Mesh.cpp  Mesh.h  Platform.h
Math/: Math.h  MathPlayground.cpp
Shapes/: Mainfold.h  Manifold.h  Transformable.h
shaders/: WhiteVertexShader.vertexshader
src/: CMakeLists.txt  Main.cpp  PlaygroundMain.cpp
src/Core/: Display.cpp  Display.h  Mesh.cpp  Mesh.h  Platform.h
src/Math/: Math.h  RealFunctions.h
src/Shapes/: Manifold.cpp  Manifold.h
x64/Debug/: main.obj.enc  vc140.idb
x64/Debug/Raytracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Raytracing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/Raytracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Raytracing.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
